# MultithreadedObserver

./: .gitignore  .gitmodules  CMakeLists.txt  README
observer/: Observable.hpp  Trait.hpp
tests/: observer_mock.hpp  tests.cpp
